Tue Dec 15 14:10:19 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (main): Fix possible crash when MAN_MUST_CREATE is
	  unset.
	* NEWS: Document this.

Tue Dec 15 13:47:50 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* lib/debug.c (init_debug): New function: check for MAN_DEBUG=1 in
	  the environment.
	* include/manconfig.h.in (init_debug): Add prototype.
	* src/accessdb.c (main), src/catman.c (main), src/globbing_test.c
	  (main), src/lexgrog_test.c (main), src/man.c (main),
	  src/manconv_main.c (main), src/mandb.c (main), src/manpath.c
	  (main), src/whatis.c (main), src/zsoelim_main.c (main): Call
	  init_debug.
	* NEWS: Document this.

Sat Dec 12 00:36:14 GMT 2009  Robert Luberda  <robert@debian.org>

	* man/po4a/po/pl.po: Update from Translation Project.

Tue Dec  1 17:01:19 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (do_extern): Pass section through to external program
	  (Savannah bug #28145). Fix passing of alternate system name to use
	  -m rather than -s.

Tue Nov 24 18:27:59 GMT 2009  Robert Luberda  <robert@debian.org>

	* po/pl.po: Update from Translation Project.

Wed Nov 18 14:58:52 GMT 2009  Yuri Kozlov  <yuray@komyakino.ru>

	* man/po4a/po/ru.po: Update from Translation Project.

Wed Nov 18 14:55:31 GMT 2009  Yuri Kozlov  <yuray@komyakino.ru>

	* po/ru.po: Update from Translation Project.

Wed Nov 18 14:52:43 GMT 2009  Erwin Poeze  <erwin.poeze@gmail.com>

	* po/nl.po: Update from Translation Project.

Sun Nov 15 22:49:35 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* README (Non-generic arguments to configure): Use more readable
	  formatting.
	* manual/options-only.me, manual/print-options: New file.
	* manual/intro.me (Arguments to configure): Add hooks for
	  options-only.me.
	* manual/Makefile.am (dist_noinst_DATA): Add options-only.me and
	  print-options.

Sun Nov 15 16:15:56 GMT 2009  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Revision control): Savannah has disabled bzr+ssh for