@@ -1,0 +1,15 @@
+#! /bin/sh
+
+# Test manconv's handling of incomplete characters at end of file.
+
+: ${srcdir=.}
+. "$srcdir/testlib.sh"
+
+: ${MANCONV=manconv}
+
+init
+
+printf '\xcc' >"$tmpdir/1.inp"
+expect_pass 'incomplete character at EOF' '! $MANCONV -f EUC-JP -t UTF-8//IGNORE <"$tmpdir/1.inp" >/dev/null'
+
+finish
